[package]
name = "media-service"
version = "0.0.0"
authors = ["Баринов Сергей Владимирович <bool.rus@gmail.com>"]

[features]
default = ["sha1/std", "failure/std"]

[dependencies]
actix-web = "0.7"
bip_metainfo = "0.10"
futures = "0.1"
bytes = "0.4"
futures-fs = "*"
http = "0.1"
sha1 = "0.6"
uuid = "0.7"
failure = "0.1"
failure_derive = "0.1"