[package]
name = "media-service"
version = "0.0.0"
authors = ["Баринов Сергей Владимирович <bool.rus@gmail.com>"]

[features]
default = ["sha1/std", "failure/std"]

[dependencies]
actix-web = "0.7"
bip_metainfo = "0.10"
bytes = "0.4"
futures-fs = "*"
http = "0.1"
sha1 = "0.6"
hex = "0.3"
uuid = "0.7"
failure = "0.1"
failure_derive = "0.1"
serde = "1.0"
serde_derive = "1.0"
display_derive = "0.0.0"
serde_json = "1.0"
percent_encoding = {version="1.0", package="percent-encoding"}
bencoders = "0.1"
nom_old = {version = "~0.3.0", package="nom"}
nom = "5.0.1"
tokio = "*"
